--- a/markup/components/field-search/field-search.scss
+++ b/markup/components/field-search/field-search.scss
@@ -1,1 +1,68 @@
+.field-search {
+    position: relative;
 
+    & input[type='submit'] {
+        display: none;
+    }
+
+    &__input {
+        box-sizing: border-box;
+        padding: 0 36px 0 16px;
+        width: 100%;
+        max-width: 396px;
+        height: 34px;
+        border: solid 2px $blue-neon;
+        background-color: transparent;
+        color: white;
+        font-size: 16px;
+        font-weight: 100;
+        letter-spacing: 0;
+        border-radius: 10px;
+        outline: 0;
+        box-shadow: 0 0 0px $blue-neon;
+
+        transition: box-shadow .1s ease-in, border-radius .2s ease, border .2s ease;
+
+        &::placeholder {
+            color: $grey;
+        }
+
+        &:hover, &:active, &:focus {
+            box-shadow: 
+            0 0 2px $blue-neon, 
+            0 0 5px $blue-neon, 
+            0 0 10px $blue-neon, 
+            0 0 20px $blue-neon;
+
+            ~ .field-search__icon {
+                transform: rotate(90deg);
+                transition:  transform .1s ease-in;
+            }
+        }
+    }
+
+    &__icon {
+        display: inline-block;
+        width: 26px;
+        height: 26px;
+        position: absolute;
+        right: 5px;
+        top: 0;
+        bottom: 0; 
+        margin: auto;
+        pointer-events: none;
+        transition:  transform .1s ease-in;
+
+
+        & svg {
+            fill: $blue-neon;
+        }
+    }
+}
+
+.header--scroll {
+    & .field-search__input {
+        border-radius: 0;
+        transition: box-shadow .1s ease-in, border-radius .2s ease;
+    }
+}
