--- a/markup/components/header/header.pug
+++ b/markup/components/header/header.pug
@@ -1,16 +1,19 @@
 mixin header(data)
-    .header
+    .header.header--scroll
         .container
-            .row
+            .row.align-items-center
                 .col-1
-                    .header__logo-heart
-                        img(src="", alt="")
-                .col-2
-                    .header__logo-text
-                        img(src="", alt="")
-                .col-6
+                    a(href="#!").header__logo-heart
+                        img(src="./static/img/content/logo.png", alt="", width="100", height="45").header__logo.header__logo--active
+                        img(src="./static/img/content/logo-hover.png", alt="", width="100", height="45").header__logo.header__logo--hover
+                .col-3.justify-center
+                    .header__title
+                        span.header__title-logo.header__title-logo--skar Skarsgar
+                        span.header__title-logo.header__title-logo--d d
+                        span.header__title-logo.header__title-logo--ev ev
+                .col-5
                     .header__nav
-                        +nav()
+                        //- +nav()
                 .col-3
                     .header__search
                         +field-search()
