--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -3,6 +3,7 @@ html(class="no-js", lang="ru")
 
     include ../components/head/head.pug
     include ../components/footer/footer.pug
+    include ../components/svg/svg.pug
     include ../components/header/header.pug
     include ../components/nav/nav.pug
     include ../components/field-search/field-search.pug
@@ -14,6 +15,7 @@ html(class="no-js", lang="ru")
 
         section.page__wrapper
             +header()
+            
 
         script(src='%=static=%js/separate-js/svg4everybody.min.js')
         script svg4everybody();
