--- a/markup/static/scss/common.scss
+++ b/markup/static/scss/common.scss
@@ -9,3 +9,9 @@ html, body {
 * html {
     height: 100%;
 }
+
+@media (min-width: 1520px) {
+    body .container {
+        max-width: 1440px;
+    }
+}
