--- a/markup/static/scss/vars.scss
+++ b/markup/static/scss/vars.scss
@@ -1,3 +1,6 @@
 // File for scss-vars.
 // For example: main colors, paddings and so on.
 $main-color: #191a1c;
+$blue-neon: #94edff;
+$pink-neon: #f062d8;
+$grey: #afaaaa;
