--- a/markup/components/field-search/field-search.scss
+++ b/markup/components/field-search/field-search.scss
@@ -6,11 +6,11 @@
     }
 
     &__input {
-        box-sizing: border-box;
-        padding: 0 36px 0 16px;
-        width: 100%;
-        max-width: 396px;
         height: 34px;
+        box-sizing: border-box;
+        width: 100%;
+        padding: 0 36px 0 16px;
+        max-width: 396px;
         border: solid 2px $blue-neon;
         background-color: transparent;
         color: white;
@@ -27,31 +27,33 @@
             color: $grey;
         }
 
-        &:hover, &:active, &:focus {
-            box-shadow: 
-            0 0 2px $blue-neon, 
-            0 0 5px $blue-neon, 
-            0 0 10px $blue-neon, 
-            0 0 20px $blue-neon;
+        &:hover,
+        &:active,
+        &:focus {
+            box-shadow:
+                0 0 2px $blue-neon,
+                0 0 5px $blue-neon,
+                0 0 10px $blue-neon,
+                0 0 20px $blue-neon;
 
-            ~ .field-search__icon {
+            ~.field-search__icon {
                 transform: rotate(90deg);
-                transition:  transform .1s ease-in;
+                transition: transform .1s ease-in;
             }
         }
     }
 
     &__icon {
-        display: inline-block;
         width: 26px;
         height: 26px;
         position: absolute;
+        display: inline-block;
         right: 5px;
         top: 0;
-        bottom: 0; 
+        bottom: 0;
         margin: auto;
         pointer-events: none;
-        transition:  transform .1s ease-in;
+        transition: transform .1s ease-in;
 
 
         & svg {
@@ -62,7 +64,29 @@
 
 .header--scroll {
     & .field-search__input {
-        border-radius: 0;
         transition: box-shadow .1s ease-in, border-radius .2s ease;
+        border-radius: 0;
     }
 }
+
+
+// @media (max-width: 767px) {
+//     .field-search {
+//         width: 100%;
+//         height: 34px;
+//         display: inline-block;
+
+//         &__input {
+//             position: absolute;
+//             transform: translateX(50vw);
+//             transition: transform .2s ease;
+//         }
+
+//         &--active {
+//             & .field-search__input {
+//                 transform: translateX(0)
+//             }
+//         }
+//     }
+
+// }
