--- a/markup/static/scss/common.scss
+++ b/markup/static/scss/common.scss
@@ -4,6 +4,19 @@ html, body {
     height: 100%;
 }
 
+body {
+    background-color: $main-color;
+}
+
+.page__wrapper {
+    overflow: hidden;
+}
+
+h1, h2, h3, h4, h5, p {
+    margin: 0;
+    padding: 0;
+}
+
 
 
 * html {
