--- a/markup/static/scss/etc/etc.scss
+++ b/markup/static/scss/etc/etc.scss
@@ -1,3 +1,4 @@
 @import "components/header/header.scss";
 @import "components/nav/nav.scss";
 @import "components/field-search/field-search.scss";
+@import "components/news/news.scss";
