--- a/markup/components/header/header.pug
+++ b/markup/components/header/header.pug
@@ -2,18 +2,18 @@ mixin header(data)
     .header.header--scroll
         .container
             .row.align-items-center
-                .col-1
+                .col-lg-1.col-md-2.d-md-block.d-none
                     a(href="#!").header__logo-heart
                         img(src="./static/img/content/logo.png", alt="", width="100", height="45").header__logo.header__logo--active
                         img(src="./static/img/content/logo-hover.png", alt="", width="100", height="45").header__logo.header__logo--hover
-                .col-3.justify-center
+                .col-lg-3.d-lg-block.d-md-none.col-12.justify-center
                     .header__title
                         span.header__title-logo.header__title-logo--skar Skarsgar
                         span.header__title-logo.header__title-logo--d d
                         span.header__title-logo.header__title-logo--ev ev
-                .col-5
+                .col-xl-5.col-lg-6.col-md-8.col-10
                     .header__nav
-                        //- +nav()
-                .col-3
+                        +nav()
+                .col-xl-3.col-lg-2.col-md-2.col-2
                     .header__search
                         +field-search()
