--- a/markup/components/header/header.scss
+++ b/markup/components/header/header.scss
@@ -17,7 +17,7 @@
 
     &__logo-heart {
         display: flex;
-        width: 100px;
+        width: 100%;
         height: 45px;
         position: relative;
         transition: height .2s ease;
@@ -61,6 +61,10 @@
             color: white;
             transition: all .2s ease;
 
+            font-family: $ManropeFont; 
+            font-size: 30px;
+            font-weight: 400;
+
             &--skar {
                 // margin: 5px 0 0;
                 margin-top: 5px;
@@ -69,7 +73,8 @@
             }
 
             &--d {
-                margin: -10px 0 0;
+                margin-top: -4px;
+                height: 70px;
                 font-size: 70px;
                 color: $blue-neon;
                 text-shadow: 
@@ -82,7 +87,7 @@
 
             &--ev {
                 margin-top: auto;
-                margin-bottom: 10px;
+                margin-bottom: 0px;
             }
         }
 
@@ -110,8 +115,14 @@
                 transition: all .2s ease;
             }
             &--d {
+                margin: 0;
+                height: 34px;
                 margin-left: 2px;
                 margin-right: 2px;
+            }
+
+            &--ev {
+                margin-bottom: 0px;
             }
         }
     }
@@ -142,3 +153,20 @@
         0 0 15px $blue-neon;
     }
 }   
+
+
+// @media (max-width: 1199px) {
+//     .header__logo-heart {
+//         display: none;
+//     }
+// }
+
+// @media (max-width: 999px) {
+//     .header__logo-heart {
+//         display: block;
+//     }
+
+//     .header__title {
+//         display: none;
+//     }
+// }
