--- a/markup/components/nav/nav.scss
+++ b/markup/components/nav/nav.scss
@@ -1,6 +1,8 @@
 .nav {
     & ul {
         display: flex;
+        padding: 0;
+        margin: 0;
     } 
 
     & li {
@@ -12,8 +14,107 @@
     }
 
     &__item {
+        position:relative;
+        z-index: 1;
         color: white;
         text-decoration: none;
-        padding-left: 25px;
+        // padding-left: 25px;
+        padding-left: 10px;
+        padding-right: 10px;
+        text-transform: uppercase;
+        font-family: $ManropeFont; 
+        font-size: 14px;
+        font-weight: 400;
+
+        &:hover {
+            color: #f5a100;
+            transition: color .2s ease;
+
+            &:after {
+                background-color: #f5a100;
+                width: 100%;
+                transition: width .2s ease, background-color .2s ease;          
+        }
+
+    }
+
+        &:after {
+            display: block;
+            position: absolute;
+            left: 0;
+            bottom: -4px;
+            right: 0;
+            margin: auto;
+            width: 0%;
+            height: 2px;
+            content: '.';
+            color: transparent;
+            background-color: $main-color;
+            z-index: -1;
+            transition: width .2s ease, background-color .2s ease;
+          }
     }
 }
+
+
+
+.header--scroll {
+    & .nav__item {
+        transition: color .2s ease;
+        display: flex;
+        align-items: center;
+        height: 34px;
+        &::after {
+            display: block;
+            position: absolute;
+            margin: 0;
+            left: 0;
+            bottom: 0;
+            width: 2px;
+            height: 0%;
+            content: '.';
+            color: transparent;
+            background: $main-color;
+            z-index: -1;
+            transition: height .2s .2s ease, width .2s ease, background-color .2s .2s ease;
+        }
+
+        &::before {
+            display: block;
+            position: absolute;
+            margin: 0;
+            right: 0;
+            bottom: 0px;
+            top: 0;
+            width: 2px;
+            height: 0%;
+            content: '.';
+            color: transparent;
+            background: $main-color;
+            z-index: -1;
+            transition: height .2s .2s ease, background-color 2s ease;
+        }
+
+        &:hover {
+
+            color: $main-color;
+            transition: color .2s .2s ease;
+
+            &::after {
+                background-color: #f5a100;
+                transition: height .2s ease, width .2s .2s ease;
+                height: 100%;
+                width: 100%;
+            }
+
+            &::before {
+                background-color: #f5a100;
+                height: 100%;
+                transition: height .2s ease;
+            }
+        }
+    }
+}
+
+
+
